# AI-Job-Responder

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
app/: ai.py  base_scraper.py  browser.py  config.py  core.py  db.py  exceptions.py  habr_scraper.py  hh_scraper.py  utils.py  vacancy_processor.py
tests/: test_config.py  test_core.py  test_db.py  test_utils.py  test_vacancy_processor.py
