[project]
name = "new-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "playwright>=1.58.0",
    "psycopg[binary]>=3.2.0",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20260107",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
